# receiptai

./: .env.example  .eslintrc.json  .gitignore  Makefile  README.md  TODO.md  client.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
bruno/: bruno.json  query.bru  status.bru
config/: example.config.js
receiptai/: brex_script.py  brex_script_pydantic_models.py  browser.py  client.py  email_types.py  fs.py  fs_test.py  gmail.py  gmail_mcp.py  gmail_service.py  invoice_search_workflow.py  main.py  server.py  templates.py  time_mcp.py  time_test.py  transaction.py
receiptai/brex_api/: brex-expenses.json  brex-transactions.json
receiptai/brex_api/expenses/: README.md
receiptai/brex_api/expenses/expenses_api_client/: __init__.py
receiptai/brex_api/expenses/expenses_api_client/api/expenses/: list_expenses.py
receiptai/brex_api/expenses/expenses_api_client/models/: customer_location.py  legal_entity_status.py  location_lat_long.py  option_string.py  repayment.py  review.py  review_approver_type_1.py  review_reviewers_type_1.py
receiptai/brex_api/transactions/: pyproject.toml
receiptai/brex_api/transactions/transactions_api_client/api/accounts/: get_account.py
receiptai/brex_api/transactions/transactions_api_client/api/transactions/: list_cash_transactions.py
receiptai/brex_api/transactions/transactions_api_client/models/: statement_period.py  statement_start_balance.py  status.py
receiptai/domain/: email.py
receiptai/evals/: eml_unpacker.py  sample_emails.py
receiptai/evals/emails/: 1.eml  2.eml  3.eml  4.eml  5.eml
receiptai/receipt_sources/email/gmail/: gmail_mcp.py  gmail_service.py
receiptai/receipt_sources/email/outlook/: outlook.py  outlook_mcp.py
receiptai/scripts/revolut/: revout.py
receiptai/transaction_sources/: brex_script.py
receiptai/transaction_sources/brex_api/expenses/: pyproject.toml
receiptai/transaction_sources/brex_api/expenses/expenses_api_client/api/card_expenses/: get_card_expense.py  list_expenses_1.py  update_expense.py
receiptai/transaction_sources/brex_api/expenses/expenses_api_client/api/expenses/: get_expense.py
receiptai/transaction_sources/brex_api/expenses/expenses_api_client/api/receipt_match/: receipt_match.py
receiptai/transaction_sources/brex_api/expenses/expenses_api_client/api/receipt_upload/: receipt_upload.py
receiptai/transaction_sources/brex_api/expenses/expenses_api_client/models/: __init__.py  address.py  budget.py  category.py  create_async_file_upload_response.py  custom_field_data_type.py  custom_field_value_type.py  department.py  expense.py  expense_billing_amount_type_1.py  expense_original_amount_type_1.py  expense_payment_status.py  expense_status.py  expense_type.py  location.py  money.py  payment_instrument_type.py  payment_status_reason.py  receipt.py  receipt_match_request.py  receipt_upload_request.py  review_copilot_approver_type_1.py  reviewer_details.py  update_expense_request.py  user.py
receiptai/transaction_sources/brex_api/transactions/: README.md
receiptai/transaction_sources/brex_api/transactions/transactions_api_client/: __init__.py
receiptai/transaction_sources/brex_api/transactions/transactions_api_client/api/accounts/: get_primary_account.py  list_accounts.py  list_card_accounts.py  list_cash_statements.py  list_primary_card_statements.py
receiptai/transaction_sources/brex_api/transactions/transactions_api_client/api/transactions/: list_primary_card_transactions.py
receiptai/transaction_sources/brex_api/transactions/transactions_api_client/models/: __init__.py  card_transaction_type.py  cash_transaction_type.py  merchant.py  money.py  page_statement.py  statement.py  statement_end_balance.py
receiptai/transaction_sources/revolut/: account-statement_2024-10-30_2025-04-11_en-gb_2bedb4.csv
src/: index.ts
src/email/: gmailSearcher.js  gmailSearcher.ts
src/parsers/: csvParser.js  csvParser.ts
src/storage/: receiptStorage.js  receiptStorage.ts
src/types/: index.ts
src/web/: webScraper.js  webScraper.ts
