[project]
name = "receiptai"
version = "0.1.0"
description = "Read receipts on autopilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.1.2",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "anthropic>=0.49.0",
    "python-dotenv>=1.1.0",
    "openapi-python-client>=0.24.3",
    "pytest>=8.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
