[project]
name = "receiptai"
version = "0.1.0"
description = "Read receipts on autopilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "mcp[cli]==1.6.0",
    "google-api-python-client==2.166.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "anthropic==0.49.0",
    "python-dotenv==1.1.0",
    "openapi-python-client==0.24.3",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "bs4==0.0.2",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.69.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-anthropic==0.3.10",
    "langchain-core==0.3.51",
    "langchain-mcp-adapters==0.0.7",
    "langgraph==0.3.25",
    "langgraph-checkpoint==2.0.24",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.61",
    "langsmith==0.3.24",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "oauthlib==3.2.2",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pluggy==1.5.0",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pydantic-settings==2.8.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pytest-asyncio==0.26.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9",
    "ruamel-yaml==0.18.10",
    "ruff==0.11.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "tenacity==9.1.2",
    "typer==0.15.2",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
    "langchain-ollama>=0.3.1",
    "ollama>=0.4.7",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "receiptai",
] # list of folders that contain the packages (["."] by default)

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.optional-dependencies]
dev = ["ruff>=0.3.0"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
